[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "vllm_sp"
version = "0.0.1"
description = "vLLM with ulysses sequence parallel library"

[project.entry-points."vllm.general_plugins"]
vllm_sp = "vllm_sp:ascend_plugin"

[tool.setuptools]
packages = [
    "arctic_inference",
    "arctic_inference.common",
    "arctic_inference.common.swiftkv",
    "arctic_inference.vllm",
    "arctic_inference.vllm.swiftkv",
]

[project.optional-dependencies]
vllm = [
    'vllm==0.9.1',
]
